fix(webui): wrap explainer text on mobile

--- a/webui/css/config/settings/explainer.css
+++ b/webui/css/config/settings/explainer.css
@@ -2,7 +2,7 @@
     margin: 0;
     line-height: 1.2;
     color: gray;
-    width: 400px;
+    max-width: 400px;
     font-size: smaller;
 }
 
